--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   provider: ^6.1.1
   google_fonts: ^8.0.0
   speech_to_text: ^7.3.0
+  google_mlkit_translation: ^0.13.0
+  google_mlkit_language_id: ^0.13.0
+  spell_check_on_client: ^1.0.0
+  flutter_spell_checker: ^1.0.3
+  http: ^1.6.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
