--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.5
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
