--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   shared_preferences: ^2.5.4
   intl: ^0.20.2
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.5.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
